# week8_2nd_sample

./: CMakeLists.txt  README.md
include/: Evaluator_Library.hpp  Result.hpp  stats.hpp  text_utils.hpp
src/: Evaluator_Library.cpp  stats.cpp  text_utils.cpp
tests/: test_Evaluator_Library.cpp  test_Result.cpp  test_stats.cpp  test_text_utils.cpp
